fix: overflow w/ footer

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   background-color: black;
   color: var(--inactive-color);
-  width: 100vw;
+  width: 100%;
   z-index: 1000;
 }
 
@@ -17,8 +17,10 @@
   width: var(--content-width-percent);
   max-width: var(--content-max-width);
   border-top: 1px solid var(--inactive-color);
-  padding: 12px 0;
+  height: var(--footer-height);
+  padding: 0 12px;
   font-size: smaller;
+  box-sizing: border-box;
 }
 
 .favicon {
