--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   background-color: black;
   color: var(--inactive-color);
-  width: 100vw;
+  width: 100%;
   position: fixed;
   top: 0px;
   z-index: 1;
@@ -21,8 +21,9 @@
   align-items: center;
   text-align: left;
   width: 100%;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  height: var(--navbar-height);
+  padding: 0 12px;
+  box-sizing: border-box;
 }
 
 .navItemsWrapper {
@@ -49,7 +50,7 @@
   display: none;
   flex-direction: column;
   color: var(--bg-color);
-  width: 100vw;
+  width: 100%;
   background-color: black;
   padding: 0;
   margin: 0;
