--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,8 @@
   --content-width-percent: 95%;
   --bg-color: #f5f5f5;
   --inactive-color: gray;
+  --navbar-height: 48px;
+  --footer-height: 48px;
 }
 
 @font-face {
@@ -15,12 +17,13 @@ html {
   font-family: "NationalParkRegular", "sans-serif";
   font-size: larger;
   background-color: var(--bg-color);
-  width: 100vw;
+  height: 100%;
 }
 
 body {
   margin: 0px;
-  padding-bottom: 60px;
+  height: 100%;
+  overflow: hidden;
 }
 
 h1,
@@ -41,9 +44,12 @@ a {
 #content {
   display: flex;
   justify-content: center;
-  overflow: auto;
+  overflow-y: auto;
   width: 100%;
-  padding-top: 48px;
+  height: calc(100vh - var(--navbar-height) - var(--footer-height));
+  margin-top: var(--navbar-height);
+  margin-bottom: var(--footer-height);
+  box-sizing: border-box;
 }
 
 #main {
